--- a/style.css
+++ b/style.css
@@ -2,8 +2,9 @@ body {
   font-family: 'Source Sans Pro', sans-serif;
   background: #f5f5f5;
   color: #333;
+  max-width: 680px;
+  margin-left: auto; margin-right: auto;
 }
-
 
 a {
   color: #007aa5;
@@ -14,9 +15,22 @@ a {
   margin: 1em;
   border-radius: .5em;
   padding: 1ex;
-  background: white;
 }
 
 #container p {
   margin: 0;
+}
+
+textarea, input {
+  width: 100%; 
+  font-family: 
+  'Source Sans Pro', 
+  sans-serif; 
+  border: none; 
+  font-size: 1em;
+} 
+
+button {
+  border: none;
+  margin-top: .5em;
 }
